# paycheck

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/calendar/: semimonthly.yaml
conf/limits/: 2025.yaml
conf/market_data/: default.yaml
conf/payroll/: default.yaml
conf/rsu/: default.yaml
conf/taxes/: default.yaml
examples/: config_example.yaml
src/paycheck/: __init__.py  config_models.py  main.py  pipeline.py
src/paycheck/contrib/: engine.py  optimizer.py
src/paycheck/espp/: engine.py
src/paycheck/mappers/: legacy.py
src/paycheck/payroll/: calendar.py
src/paycheck/prices/: yahoo.py
src/paycheck/rsu/: engine.py
src/paycheck/taxes/: withholding.py
